@@ -8,16 +8,15 @@ import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import net.minecraft.client.Minecraft;
-import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.commands.Commands;
-import net.minecraft.commands.arguments.item.ItemArgument;
-import net.minecraft.commands.arguments.item.ItemInput;
-import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TextComponent;
-import net.minecraft.network.chat.TranslatableComponent;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
-import net.minecraft.world.item.Item;
+import net.minecraft.command.CommandSource;
+import net.minecraft.command.Commands;
+import net.minecraft.command.arguments.ItemArgument;
+import net.minecraft.command.arguments.ItemInput;
+import net.minecraft.item.Item;
+import net.minecraft.util.JSONUtils;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.text.ITextComponent;
+import net.minecraft.util.text.TranslationTextComponent;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.trueHorse.wildToolAccess.AccessType;
 import net.trueHorse.wildToolAccess.StuffPlaceholder;
@@ -28,14 +27,15 @@ import net.trueHorse.wildToolAccess.config.StuffHandler;
 import java.io.*;
 import java.util.ArrayList;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class WildToolAccessCommand {
 
-    private static final SimpleCommandExceptionType STUFF_FILE_NOT_FOUND = new SimpleCommandExceptionType(new TranslatableComponent("command.wildtoolaccess.stuff.file_not_found"));
-    private static final SimpleCommandExceptionType COULDNT_WRITE_TO_STUFF = new SimpleCommandExceptionType(new TranslatableComponent("command.wildtoolaccess.stuff.couldnt_write"));
-    private static final SimpleCommandExceptionType PROB_COULDNT_READ_STUFF = new SimpleCommandExceptionType(new TranslatableComponent("command.wildtoolaccess.stuff.probably_couldnt_read"));
+    private static final SimpleCommandExceptionType STUFF_FILE_NOT_FOUND = new SimpleCommandExceptionType(new TranslationTextComponent("command.wildtoolaccess.stuff.file_not_found"));
+    private static final SimpleCommandExceptionType COULDNT_WRITE_TO_STUFF = new SimpleCommandExceptionType(new TranslationTextComponent("command.wildtoolaccess.stuff.couldnt_write"));
+    private static final SimpleCommandExceptionType PROB_COULDNT_READ_STUFF = new SimpleCommandExceptionType(new TranslationTextComponent("command.wildtoolaccess.stuff.probably_couldnt_read"));
 
-    public static void register(CommandDispatcher<CommandSourceStack> dispatcher){
+    public static void register(CommandDispatcher<CommandSource> dispatcher){
         dispatcher.register(Commands.literal("wta")
                 .then(Commands.literal("stuff")
                         .then(Commands.literal("add")
@@ -62,20 +62,20 @@ public class WildToolAccessCommand {
                 ));
     }
 
-    private static int executeModifyStuff(ArrayList<ResourceLocation> itemIds, Operation operation, CommandSourceStack source) throws CommandSyntaxException {
+    private static int executeModifyStuff(ArrayList<ResourceLocation> itemIds, Operation operation, CommandSource source) throws CommandSyntaxException {
         if(!StuffHandler.STUFF_FILE.exists()){
             StuffHandler.createStuffFileWithValuesEmpty();
         }
 
         JsonObject obj;
         try {
-            obj = GsonHelper.parse(new FileReader(StuffHandler.STUFF_FILE));
+            obj = JSONUtils.parse(new FileReader(StuffHandler.STUFF_FILE));
         } catch (FileNotFoundException e) {
             throw STUFF_FILE_NOT_FOUND.create();
         }
 
-        JsonArray vals = GsonHelper.getAsJsonArray(obj,"values");
-        Component feedback = operation.apply(itemIds,vals,source);
+        JsonArray vals = JSONUtils.getAsJsonArray(obj,"values");
+        ITextComponent feedback = operation.apply(itemIds,vals,source);
 
         try{
             FileWriter fwriter = new FileWriter(StuffHandler.STUFF_FILE);
@@ -97,30 +97,30 @@ public class WildToolAccessCommand {
         return 1;
     }
 
-    private static int executeClearStuff(CommandSourceStack source){
+    private static int executeClearStuff(CommandSource source){
         StuffHandler.createStuffFileWithValuesEmpty();
-        source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.cleared"),false);
+        source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.cleared"),false);
         return 1;
     }
 
-    private static int executeResetStuff(CommandSourceStack source){
+    private static int executeResetStuff(CommandSource source){
         StuffHandler.resetStuffFile();
-        source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.cleared"),false);
+        source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.cleared"),false);
         return 1;
     }
 
-    private static int executePrintStuff(CommandSourceStack source) throws CommandSyntaxException {
+    private static int executePrintStuff(CommandSource source) throws CommandSyntaxException {
         if(!StuffHandler.STUFF_FILE.exists()){
-            source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.no_stuff"),false);
+            source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.no_stuff"),false);
         }else{
             try {
-                JsonObject obj = GsonHelper.parse(new FileReader(StuffHandler.STUFF_FILE));
-                JsonArray vals = GsonHelper.getAsJsonArray(obj, "values");
-                if(vals.isEmpty()){
-                    source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.no_stuff"),false);
+                JsonObject obj = JSONUtils.parse(new FileReader(StuffHandler.STUFF_FILE));
+                JsonArray vals = JSONUtils.getAsJsonArray(obj, "values");
+                if(vals.size()==0){
+                    source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.no_stuff"),false);
                 }
 
-                vals.forEach(val->source.sendSuccess(new TextComponent(val.getAsString()),false));
+                vals.forEach(val->source.sendSuccess(ITextComponent.nullToEmpty(val.getAsString()),false));
             } catch (FileNotFoundException e) {
                 throw STUFF_FILE_NOT_FOUND.create();
             }
@@ -128,18 +128,18 @@ public class WildToolAccessCommand {
         return 1;
     }
 
-    private static ArrayList<ResourceLocation> getItemListFromItemArgument(CommandContext<CommandSourceStack> context) {
+    private static ArrayList<ResourceLocation> getItemListFromItemArgument(CommandContext<CommandSource> context) {
         ArrayList<ResourceLocation> list = new ArrayList<ResourceLocation>();
         list.add(ForgeRegistries.ITEMS.getKey(context.getArgument("item", ItemInput.class).getItem()));
         return list;
     }
 
-    private static ArrayList<ResourceLocation> getItemListFromAccessTypeArgument(CommandContext<CommandSourceStack> context){
+    private static ArrayList<ResourceLocation> getItemListFromAccessTypeArgument(CommandContext<CommandSource> context){
         ArrayList<ResourceLocation> itemIdsOfType = new ArrayList<ResourceLocation>();
         Class<?> type = context.getArgument("type", AccessTypeArgument.class).getType();
 
         if(type == StuffPlaceholder.class){
-            itemIdsOfType.addAll(StuffHandler.getStuffItems().stream().map(ForgeRegistries.ITEMS::getKey).toList());
+            itemIdsOfType.addAll(StuffHandler.getStuffItems().stream().map(ForgeRegistries.ITEMS::getKey).collect(Collectors.toList()));
         }else{
             Set<ResourceLocation> allItemIds = ForgeRegistries.ITEMS.getKeys();
             for(ResourceLocation id:allItemIds){
@@ -153,9 +153,9 @@ public class WildToolAccessCommand {
         return itemIdsOfType;
     }
 
-    private static ArrayList<ResourceLocation> getItemListFromInventory(CommandContext<CommandSourceStack> context){
+    private static ArrayList<ResourceLocation> getItemListFromInventory(CommandContext<CommandSource> context){
         ArrayList<ResourceLocation> ids = new ArrayList<ResourceLocation>();
-        Minecraft.getInstance().player.getInventory().items.forEach(stack-> {
+        Minecraft.getInstance().player.inventory.items.forEach(stack-> {
             if(!stack.isEmpty()){
                 ids.add(ForgeRegistries.ITEMS.getKey(stack.getItem()));
             }
@@ -166,37 +166,37 @@ public class WildToolAccessCommand {
     private enum Operation{
         ADD{
             @Override
-            protected Component apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSourceStack source) {
+            protected ITextComponent apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSource source) {
                 ArrayList<ResourceLocation> addedIds = new ArrayList<>(ids);
 
                 ids.forEach(id->{
                     if (vals.remove(new JsonPrimitive(id.toString()))) {
-                        source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.already_contains", id.toString()),false);
+                        source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.already_contains", id.toString()),false);
                         addedIds.remove(id);
                     }
                     vals.add(new JsonPrimitive(id.toString()));
                 });
 
-                return new TranslatableComponent("command.wildtoolaccess.stuff.added",addedIds);
+                return new TranslationTextComponent("command.wildtoolaccess.stuff.added",addedIds);
             }
         },
         REMOVE{
             @Override
-            protected Component apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSourceStack source) {
+            protected ITextComponent apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSource source) {
                 ArrayList<ResourceLocation> removedIds = new ArrayList<>(ids);
 
                 ids.forEach(id->{
                     if(!vals.remove(new JsonPrimitive(id.toString()))){
-                        source.sendSuccess(new TranslatableComponent("command.wildtoolaccess.stuff.does_not_contain",id.toString()),false);
+                        source.sendSuccess(new TranslationTextComponent("command.wildtoolaccess.stuff.does_not_contain",id.toString()),false);
                         removedIds.remove(id);
                     }
                 });
 
-                return new TranslatableComponent("command.wildtoolaccess.stuff.removed",removedIds);
+                return new TranslationTextComponent("command.wildtoolaccess.stuff.removed",removedIds);
             }
         };
 
-        protected abstract Component apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSourceStack source);
+        protected abstract ITextComponent apply(ArrayList<ResourceLocation> ids, JsonArray vals, CommandSource source);
     }
 
 }
